fixing ie issue regarding social media btns

--- a/css/ie.css
+++ b/css/ie.css
@@ -1,8 +1,10 @@
+/*
 #sthoverbuttons{
 	position: absolute !important;
 }
 
+
 #sthoverbuttons #sthoverbuttonsMain{
 	background-color: #d7d7d7;
 	border: #fff solid 1px;
-}
+}*/
